Chore: Split OSS and Enterprise OAPI Spec Generation (#75133)
* chore: implement sofia makefile changes from #62456

* chore: clean up makefile and generate specs

* docs: update command to delete old specs

* fix: regenerate specs with enterprise linked

* chore: implement review comments

* Update Makefile

Co-authored-by: Sofia Papagiannaki <1632407+papagian@users.noreply.github.com>

* chore: update make command in drone step

* chore: update bingo, fix makefile indentation error, regen specs

* fix: revert .bingo/README changes to make prettier happy

* chore: add BEP as owners of api-enterprise-spec.json

* chore: rerun drone

---------

Co-authored-by: Sofia Papagiannaki <1632407+papagian@users.noreply.github.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -441,7 +441,7 @@ steps:
   name: validate-modfile
 - commands:
   - apk add --update make
-  - make validate-api-spec
+  - make swagger-validate
   image: golang:1.20.8-alpine
   name: validate-openapi-spec
 trigger:
@@ -1630,7 +1630,7 @@ steps:
   name: validate-modfile
 - commands:
   - apk add --update make
-  - make validate-api-spec
+  - make swagger-validate
   image: golang:1.20.8-alpine
   name: validate-openapi-spec
 - commands:
@@ -4212,6 +4212,6 @@ kind: secret
 name: gcr_credentials
 ---
 kind: signature
-hmac: f396274e4808957992b702206f675a2ff3385f67f7fce4ee8a883ceb853d5cca
+hmac: da647c8f3b339a16dbf84f27abcd39b4ac50b303dc360a4ea5796243e6f7d035
 
 ...
