--- a/.gitignore
+++ b/.gitignore
@@ -87,8 +87,10 @@ public/css/*.min.css
 /devenv/docker/ha-test-unified-alerting/logs/webhook/webhook-listener.log
 
 conf/custom.ini
-/conf/provisioning/**/custom.yaml
-/conf/provisioning/**/dev.yaml
+
+/conf/provisioning/**/*.yaml
+!/conf/provisioning/**/sample.yaml
+
 /conf/ldap_dev.toml
 /conf/ldap_freeipa.toml
 profile.cov
@@ -126,6 +128,7 @@ pkg/services/quota/quotaimpl/storage/storage.json
 *.orig
 
 /devenv/bulk-dashboards/*.json
+/devenv/bulk-folders/*/*.json
 /devenv/bulk_alerting_dashboards/*.json
 /devenv/datasources_bulk.yaml
 /devenv/bulk_alerting_dashboards/bulk_alerting_datasources.yaml
