Hack around with generating Markdown from transformations helpers
```console
$ cd docs
$ make sources/panels-visualizations/query-transform-data/transform-data/index.md
$ make docs
```

Browse to http://localhost:3003/docs/grafana/latest/panels-visualizations/query-transform-data/transform-data/

Signed-off-by: Jack Baldry <jack.baldry@grafana.com>

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,7 @@ deployment_tools_config.json
 
 # Temporary file for backporting PRs
 .pr-body.txt
+
+# Ignore transpiled JavaScript resulting from the generate-transformations.ts script.
+/public/app/features/transformers/helpers/*.js
+/scripts/docs/generate-transformations.js
