--- a/.drone.yml
+++ b/.drone.yml
@@ -1137,6 +1137,70 @@ volumes:
   name: docker
 ---
 clone:
+  disable: true
+depends_on: []
+image_pull_secrets:
+- dockerconfigjson
+kind: pipeline
+name: pr-swagger-gen
+node:
+  type: no-parallel
+platform:
+  arch: amd64
+  os: linux
+services: []
+steps:
+- commands:
+  - git clone https://github.com/grafana/grafana.git grafana
+  - cd grafana
+  - git checkout ${DRONE_SOURCE_BRANCH}
+  image: golang:1.20.8-alpine
+  name: clone-pr-branch
+- commands:
+  - git clone "https://$${GITHUB_TOKEN}@github.com/grafana/grafana-enterprise.git"
+  - cd grafana-enterprise
+  - if git show-ref refs/heads/${DRONE_SOURCE_BRANCH}; then git checkout ${DRONE_SOURCE_BRANCH};
+    else git checkout main; fi
+  - ./dev.sh
+  depends_on:
+  - clone-pr-branch
+  environment:
+    GITHUB_TOKEN:
+      from_secret: github_token_pr
+  image: golang:1.20.8-alpine
+  name: clone-pr-enterprise-branch
+- commands:
+  - cd grafana
+  - make clean-api-spec && make openapi3-gen
+  - for f in public/api-spec.json public/api-merged.json public/openapi3.json; do
+    git add $f; done
+  - if [ -z "$(git diff --name-only --cached)" ]; then echo "Everything seems up to
+    date!"; else git commit -m "Update OpenAPI and Swagger" --author="Grot (@grafanabot)
+    <43478413+grafanabot@users.noreply.github.com>" && git push https://$${GITHUB_TOKEN}@github.com/grafana/grafana.git
+    ${DRONE_SOURCE_BRANCH}; fi
+  depends_on:
+  - clone-pr-enterprise-branch
+  environment:
+    GITHUB_TOKEN:
+      from_secret: github_token
+  image: golang:1.20.8-alpine
+  name: swagger-gen
+trigger:
+  event:
+  - pull_request
+  paths:
+    exclude:
+    - docs/**
+    - '*.md'
+    include:
+    - pkg/**
+type: docker
+volumes:
+- host:
+    path: /var/run/docker.sock
+  name: docker
+---
+clone:
   retries: 3
 depends_on: []
 environment:
@@ -4212,6 +4276,6 @@ kind: secret
 name: gcr_credentials
 ---
 kind: signature
-hmac: 0b878d482338e27f3b8208271c974aa6c9cce0c4785eec59cf338464665b9ab5
+hmac: 0d8111aeb086118e4f14a697a7cd18b6abb23f29e39caa51dc58bf289ea2a8d9
 
 ...
