--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@types/d3-force": "^3.0.0",
     "@types/d3-scale-chromatic": "3.0.0",
     "@types/debounce-promise": "3.1.6",
+    "@types/diff": "^5",
     "@types/eslint": "8.44.0",
     "@types/file-saver": "2.0.5",
     "@types/glob": "^8.0.0",
@@ -311,6 +312,7 @@
     "dangerously-set-html-content": "1.0.9",
     "date-fns": "2.30.0",
     "debounce-promise": "3.1.2",
+    "diff": "^5.1.0",
     "emotion": "11.0.0",
     "eventemitter3": "5.0.1",
     "fast-deep-equal": "^3.1.3",
