--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -34,24 +34,25 @@
 /devenv/README.md @grafana/docs-grafana
 
 # Technical documentation
-/docs/                                    @Eve832 @jdbaldry
-/docs/sources/                            @Eve832
-/docs/sources/administration/             @Eve832 @GrafanaWriter
-/docs/sources/alerting/                   @brendamuir
-/docs/sources/dashboards/                 @imatwawana
-/docs/sources/datasources/                @Eve832 @GrafanaWriter
-/docs/sources/explore/                    @Eve832 @GrafanaWriter
-/docs/sources/fundamentals                @chri2547
-/docs/sources/getting-started/            @chri2547
-/docs/sources/introduction/               @chri2547
-/docs/sources/old-alerting/               @brendamuir
-/docs/sources/panels-visualizations/      @imatwawana
-/docs/sources/release-notes/              @Eve832 @GrafanaWriter
-/docs/sources/setup-grafana/              @chri2547
-/docs/sources/upgrade-guide/              @chri2547 @imatwawana
-/docs/sources/whatsnew/                   @chri2547 @imatwawana
-/docs/sources/developers/plugins/         @Eve832 @josmperez @grafana/plugins-platform-frontend @grafana/plugins-platform-backend
-/docs/sources/developers/plugins/introduction-to-plugin-development/backend/ @Eve832 @grafana/plugins-platform-backend
+# `make docs` procedure and related workflows are owned @grafana/docs-tooling. Slack #docs.
+# Documentation sources might have different owners.
+/docs/                                                                       @grafana/docs-tooling
+/docs/sources/                                                               @Eve832
+/docs/sources/administration/                                                @Eve832 @GrafanaWriter
+/docs/sources/alerting/                                                      @brendamuir
+/docs/sources/dashboards/                                                    @imatwawana
+/docs/sources/datasources/                                                   @lwandz13
+/docs/sources/explore/                                                       @grafana/explore-squad
+/docs/sources/fundamentals                                                   @chri2547
+/docs/sources/getting-started/                                               @chri2547
+/docs/sources/introduction/                                                  @chri2547
+/docs/sources/old-alerting/                                                  @brendamuir
+/docs/sources/panels-visualizations/                                         @imatwawana
+/docs/sources/release-notes/                                                 @Eve832 @GrafanaWriter
+/docs/sources/setup-grafana/                                                 @chri2547
+/docs/sources/upgrade-guide/                                                 @imatwawana
+/docs/sources/whatsnew/                                                      @imatwawana
+/docs/sources/developers/plugins/                                            @Eve832 @josmperez @grafana/plugins-platform-frontend @grafana/plugins-platform-backend
 
 # Backend code
 /go.mod @grafana/backend-platform
