baldm0mma/doc_builder/ add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,7 @@ deployment_tools_config.json
 
 # Temporary file for backporting PRs
 .pr-body.txt
+
+# Ignore transpiled JavaScript resulting from the generate-transformations.ts script.
+/public/app/features/transformers/docs/*.js
+/scripts/docs/generate-transformations.js
