fix: fix drone lint err invalid or unknown step dependency

--- a/.drone.yml
+++ b/.drone.yml
@@ -1164,9 +1164,8 @@ steps:
   - git clone "https://$${GITHUB_TOKEN}@github.com/grafana/grafana-enterprise.git"
     grafana-enterprise
   - cd grafana-enterprise
-  - if git checkout ${DRONE_SOURCE_BRANCH}; then echo "checked out ${DRONE_SOURCE_BRANCH}";
-    elif git checkout main; then echo "git checkout main"; else git checkout main;
-    fi
+  - if git checkout ${DRONE_COMMIT}; then echo "checked out ${DRONE_COMMIT}"; elif
+    git checkout main; then echo "git checkout main"; else git checkout main; fi
   environment:
     GITHUB_TOKEN:
       from_secret: github_token
@@ -1182,7 +1181,7 @@ steps:
     <43478413+grafanabot@users.noreply.github.com>" && git push https://$${GITHUB_TOKEN}@github.com/grafana/grafana.git
     ${DRONE_SOURCE_BRANCH}; fi
   depends_on:
-  - clone-pr-enterprise-branch
+  - clone-enterprise
   environment:
     GITHUB_TOKEN:
       from_secret: github_token
@@ -4277,3 +4276,8 @@ get:
   path: secret/data/common/gcr
 kind: secret
 name: gcr_credentials
+---
+kind: signature
+hmac: 76f97ed8bce6606abf37327721a1a01e769dc30ab5dd74b2c7a6a6d72d8dcaab
+
+...
