CI: Run publish-kinds workflows only on the main repository (#75855)
(cherry picked from commit 76c6bf88be741cb28f6ea5f60d064e0a2c2f457a)

--- a/.github/workflows/publish-kinds-release.yml
+++ b/.github/workflows/publish-kinds-release.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   main:
+    if: github.repository == 'grafana/grafana'
     runs-on: "ubuntu-latest"
     steps:
       - name: "Checkout Grafana repo"
