--- a/public/app/plugins/datasource/grafana-testdata-datasource/.eslintrc
+++ b/public/app/plugins/datasource/grafana-testdata-datasource/.eslintrc
@@ -1,4 +1,8 @@
 {
-  "extends": "./.config/.eslintrc",
+  "extends": ["@grafana/eslint-config"],
+  "root": true,
+  "rules": {
+    "react/prop-types": "off"
+  },
   "ignorePatterns": ["**/*.gen.ts"]
 }
