--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsPerfOperations.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsPerfOperations.json
@@ -132,7 +132,6 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -312,7 +311,7 @@
           "subscriptions": []
         }
       ],
-      "title": "Server Response Time (sec) $operation_name",
+      "title": "Server Response Time (sec)",
       "transformations": [],
       "type": "timeseries"
     },
@@ -321,7 +320,6 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -438,7 +436,6 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -597,7 +594,6 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
         "defaults": {
           "custom": {
@@ -715,7 +711,7 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
+      "description": "Click on a bar on the chart below to set the minimum and maximum duration. To reset the zoom, change the Minimum Duration and Maximum duration variables.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -742,15 +738,14 @@
               "mode": "off"
             }
           },
-          "displayName": "Count",
           "links": [],
           "mappings": [],
-          "noValue": "--",
           "thresholds": {
             "mode": "absolute",
             "steps": [
               {
-                "color": "dark-green"
+                "color": "dark-green",
+                "value": null
               },
               {
                 "color": "semi-dark-green",
@@ -779,12 +774,12 @@
                 "id": "links",
                 "value": [
                   {
-                    "title": "Set Min Duration (Current: $min_duration}",
-                    "url": "/d/Azure-AI-Analysis-Perf/?${ds:queryparam}&${sub:queryparam}&${${rg:queryparam}&${${ns:queryparam}&${res:queryparam}&${operation_name:queryparam}&${max_duration:queryparam}&var-min_duration=${__data.fields[\"Duration (ms)\"]}"
+                    "title": "Set Min Duration (Current: $min_duration)",
+                    "url": "/d/Azure-AppInsights-Perf-Operations/?${ds:queryparam}&${sub:queryparam}&${${rg:queryparam}&${${ns:queryparam}&${res:queryparam}&${operation_name:queryparam}&${max_duration:queryparam}&var-min_duration=${__data.fields[\"Duration (ms)\"]}"
                   },
                   {
-                    "title": "Set Max Duration (Current: $max_duration}",
-                    "url": "/d/Azure-AI-Analysis-Perf/?${ds:queryparam}&${sub:queryparam}&${${rg:queryparam}&${${ns:queryparam}&${res:queryparam}&${operation_name:queryparam}&${min_duration:queryparam}&var-max_duration=${__data.fields[\"Duration (ms)\"]}"
+                    "title": "Set Max Duration (Current: $max_duration)",
+                    "url": "/d/Azure-AppInsights-Perf-Operations/?${ds:queryparam}&${sub:queryparam}&${${rg:queryparam}&${${ns:queryparam}&${res:queryparam}&${operation_name:queryparam}&${min_duration:queryparam}&var-max_duration=${__data.fields[\"Duration (ms)\"]}"
                   }
                 ]
               }
@@ -838,7 +833,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "// distribution of requests by logarithmic duration buckets\nlet timeGrain=5m;\nlet numberOfBuckets = 100;\n// filter to a subset of requests\n\nlet dataset = requests\n    | where $__timeFilter(timestamp)\n    | where client_Type != \"Browser\"\n    // additional filters can be applied here\n    | where operation_Name in ($operation_name)\n| where duration >= $min_duration and duration <= $max_duration\n    | extend value=duration\n    | project itemCount, value;\n// calculate the maximum duration for all requests\nlet maxValue=toscalar(dataset\n    | summarize max(value));\n// calculate the logarithmic base that determines the start of each bucket\n// use the max duration to ensure the scale spans all possible durations in the data set\nlet bucketBase = pow(maxValue, 1 / todouble(numberOfBuckets));\n// define a table with an index for each bucket to allow for buckets with 0 requests\nlet bucketSlots=range bucketSlot from 0 to numberOfBuckets - 1 step 1;\n// map request counts to the correct bucket and apply to the scale by joining with the complete set of buckets\nbucketSlots\n| join kind=leftouter (dataset\n    // any durations under 1ms are rounded up to 1 ms\n    // calls with durations under 1ms can be viewed in more detail using the linear scale\n    | extend adjustedValue = iff(value < 1, 1.0, value)\n    // calculate the bucket slot for each request by applying logarithmic scale\n    | extend bucketSlotRaw = tolong(bin(log(adjustedValue) / log(bucketBase), 1))\n    // calculate the request count by duration bucket (rounded to whole number)\n    | summarize count_=sum(itemCount) by bucketSlot=iff(bucketSlotRaw > numberOfBuckets - 1, numberOfBuckets - 1, bucketSlotRaw))\n    on bucketSlot\n| order by bucketSlot asc\n// calculate the real duration value for each bucket based on both the index and the bucket base (rounded to whole number)\n| project\n    [\"Duration (ms)\"]=floor(pow(bucketBase, bucketSlot), 1),\n    counts=iff(isnull(count_), 0, count_)\n| where ['Duration (ms)'] >= $min_duration\n| summarize Count=sum(counts) by [\"Duration (ms)\"]\n| order by [\"Duration (ms)\"] asc\n\n",
+            "query": "// distribution of requests by logarithmic duration buckets\nlet timeGrain=5m;\nlet numberOfBuckets = 100;\n// filter to a subset of requests\n\nlet dataset = requests\n    | where $__timeFilter(timestamp)\n    | where client_Type != \"Browser\"\n    // additional filters can be applied here\n    | where operation_Name in ($operation_name)\n    | where duration >= $min_duration and duration <= $max_duration\n    | extend value=duration\n    | project itemCount, value;\n// calculate the maximum duration for all requests\nlet maxValue=toscalar(dataset\n    | summarize max(value));\n// calculate the logarithmic base that determines the start of each bucket\n// use the max duration to ensure the scale spans all possible durations in the data set\nlet bucketBase = pow(maxValue, 1 / todouble(numberOfBuckets));\n// define a table with an index for each bucket to allow for buckets with 0 requests\nlet bucketSlots=range bucketSlot from 0 to numberOfBuckets - 1 step 1;\n// map request counts to the correct bucket and apply to the scale by joining with the complete set of buckets\nbucketSlots\n| join kind=leftouter (dataset\n    // any durations under 1ms are rounded up to 1 ms\n    // calls with durations under 1ms can be viewed in more detail using the linear scale\n    | extend adjustedValue = iff(value < 1, 1.0, value)\n    // calculate the bucket slot for each request by applying logarithmic scale\n    | extend bucketSlotRaw = tolong(bin(log(adjustedValue) / log(bucketBase), 1))\n    // calculate the request count by duration bucket (rounded to whole number)\n    | summarize count_=sum(itemCount) by bucketSlot=iff(bucketSlotRaw > numberOfBuckets - 1, numberOfBuckets - 1, bucketSlotRaw))\n    on bucketSlot\n| order by bucketSlot asc\n// calculate the real duration value for each bucket based on both the index and the bucket base (rounded to whole number)\n| project\n    [\"Duration (ms)\"]=floor(pow(bucketBase, bucketSlot), 1),\n    counts=iff(isnull(count_), 0, count_)\n| where ['Duration (ms)'] >= $min_duration\n| summarize Count=sum(counts) by [\"Duration (ms)\"]\n| order by [\"Duration (ms)\"] asc\n\n",
             "resources": [
               "/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"
             ],
@@ -854,7 +849,7 @@
           "subscriptions": []
         }
       ],
-      "title": "Request Count by Duration (Log scale)",
+      "title": "Request Count by Duration (ms)",
       "transformations": [],
       "type": "barchart"
     },
@@ -863,7 +858,6 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -876,7 +870,8 @@
             "mode": "absolute",
             "steps": [
               {
-                "color": "green"
+                "color": "green",
+                "value": null
               },
               {
                 "color": "red",
@@ -895,7 +890,12 @@
       },
       "id": 66,
       "interval": "60s",
-      "links": [],
+      "links": [
+        {
+          "title": "Reset Operation names to 'All'",
+          "url": "/d/Azure-AppInsights-Perf-Operations/?${ds:queryparam}﻿&﻿${sub:queryparam}﻿&﻿${rg:queryparam}﻿&﻿${ns:queryparam}﻿&﻿${res:queryparam}﻿&﻿${min_duration:queryparam}﻿&﻿${max_duration:queryparam}﻿&var-operation-name=All"
+        }
+      ],
       "maxDataPoints": 150,
       "options": {
         "colorMode": "value",
@@ -940,7 +940,6 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -953,7 +952,8 @@
             "mode": "absolute",
             "steps": [
               {
-                "color": "dark-red"
+                "color": "dark-red",
+                "value": null
               }
             ]
           }
@@ -968,7 +968,13 @@
       },
       "id": 65,
       "interval": "60s",
-      "links": [],
+      "links": [
+        {
+          "targetBlank": true,
+          "title": "Open Failures dashboard",
+          "url": "/d/Azure-AppInsights-Failures-Operations/?${__all_variables}"
+        }
+      ],
       "maxDataPoints": 150,
       "options": {
         "colorMode": "value",
@@ -1004,7 +1010,7 @@
           "subscriptions": []
         }
       ],
-      "title": "Number of failed operations",
+      "title": "Number of failed operations matching $operation_name",
       "transformations": [],
       "type": "stat"
     },
@@ -1013,7 +1019,7 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
+      "description": "Click on an operation name to filter this dashboard.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -1040,7 +1046,8 @@
             "mode": "absolute",
             "steps": [
               {
-                "color": "green"
+                "color": "green",
+                "value": null
               },
               {
                 "color": "#EAB839",
@@ -1108,7 +1115,7 @@
                   {
                     "targetBlank": false,
                     "title": "Filter dashboard to this operation",
-                    "url": "/d/Azure-AI-Analysis-Perf?orgId=1&${ds:queryparam}&${sub:queryparam}&${rg:queryparam}&${ns:queryparam}&${res:queryparam}&${min_duration:queryparam}&${max_duration:queryparam}&${__value.time}&var-operation_name=${__data.fields.operation_Name}"
+                    "url": "/d/Azure-AppInsights-Perf-Operations?orgId=1&${ds:queryparam}&${sub:queryparam}&${rg:queryparam}&${ns:queryparam}&${res:queryparam}&${min_duration:queryparam}&${max_duration:queryparam}&${__value.time}&var-operation_name=${__data.fields.operation_Name}"
                   }
                 ]
               }
@@ -1199,7 +1206,7 @@
         "type": "grafana-azure-monitor-datasource",
         "uid": "${DS_AZURE_MONITOR}"
       },
-      "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
+      "description": "Click on the OperationID or Name to open the trace details in explore mode.",
       "fieldConfig": {
         "defaults": {
           "color": {
@@ -1219,7 +1226,8 @@
             "mode": "absolute",
             "steps": [
               {
-                "color": "green"
+                "color": "green",
+                "value": null
               },
               {
                 "color": "orange",
@@ -1587,7 +1595,7 @@
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
-          "subscription": "ebb79bc0-aa86-44a7-8111-cabbe0c43993"
+          "subscription": "$sub"
         },
         "refresh": 1,
         "regex": "",
@@ -1618,7 +1626,7 @@
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
-          "subscription": "ebb79bc0-aa86-44a7-8111-cabbe0c43993"
+          "subscription": "$sub"
         },
         "refresh": 1,
         "regex": "",
@@ -1649,7 +1657,7 @@
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
-          "subscription": "ebb79bc0-aa86-44a7-8111-cabbe0c43993"
+          "subscription": "$sub"
         },
         "refresh": 1,
         "regex": "",
@@ -1660,12 +1668,12 @@
     ]
   },
   "time": {
-    "from": "now-30m",
-    "to": "now"
+    "from": "now-45m",
+    "to": "now-15m"
   },
   "timepicker": {},
   "timezone": "",
-  "title": "Azure / Insights / Applications - Performance - Operations",
-  "uid": "Azure-AI-Analysis-Perf",
-  "version": 49
+  "title": "Azure / Insights / Applications - Performance - 1. Operations",
+  "uid": "Azure-AppInsights-Perf-Operations",
+  "version": 68
 }
